<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="18dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/item_bg">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/circular_border"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/personname"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/company"
            app:layout_constraintTop_toTopOf="@+id/profile_image"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintHorizontal_weight="2"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/country"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/country"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>